manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
      - name: grist
        image: gristlabs/grist:1.3.2
        ports:
        - containerPort: 8484
        volumeMounts:
        - name: grist-pv-storage
          mountPath: /persist
      volumes:
      - name: grist-pv-storage
        persistentVolumeClaim:
          claimName: pvc
      resources:
        requests:
          memory: "1Gi"
          cpu: "500m"
