manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8484
      protocol: TCP
      targetPort: 8484
  selector:
    app: grist
  type: ClusterIP
