manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_pass http://grist-svc:8484;
        proxy_redirect     off;
        proxy_set_header   Host             $host;
        proxy_set_header   X-Real-IP        $remote_addr;
        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;

        # WebSocket suppßort
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";

      }
spec:
  rules:
    - host: grist.la-suite.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8484
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grist.la-suite.apps.digilab.network
      secretName: grist-tls
